--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         #removeImage {
-            display: none;
+            
         }
         
         .box-layout {
@@ -40,7 +40,7 @@
 <body>
     <div class="box-layout">
         <input type="file" id="uploadImage">
-        <button id="removeImage">Remove Image </button>
+        <button id="removeImage" onclick="removeImage()">Remove Image </button>
     </div>
 </body>
 
